// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Snapshots should match snapshot 1`] = `
.c2 {
  border-radius: 4px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 16px 8px;
}

.c3 {
  padding-left: 12px;
}

.c8 {
  padding: 8px 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px 16px 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  margin-bottom: 8px;
  margin-top: 8px;
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c4 {
  font-size: 1.5rem;
  margin: 0;
}

.c5 {
  font-size: 1rem;
  margin: 0;
}

.c0 {
  border-radius: 4px;
  display: inline-block;
  max-width: 400px;
  box-shadow: 0px 2px 5px 0px #ccc;
  width: 100%;
}

.c10 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c10:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c10 .c11 {
  font-size: 1rem;
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <img
        class="c2"
        src="https://dummyimage.com/72x72"
      />
      <div
        class="c3"
      >
        <h2
          class="c4"
        >
          Title
        </h2>
        <h3
          class="c5"
        >
          Subtitle
        </h3>
      </div>
    </header>
    <div
      class="c6"
    >
      <img
        class="c7"
        src="https://dummyimage.com/600x600"
      />
    </div>
    <div
      class="c8"
    >
      Lorem
    </div>
    <footer
      class="c9"
    >
      <button
        class="c10"
        style="margin-right: 10px;"
      >
        Button
      </button>
      <button
        class="c10"
      >
        Cancel
      </button>
    </footer>
  </section>
</div>
`;

exports[`<Card /> Snapshots should match snapshot with rounded avatar 1`] = `
.c2 {
  border-radius: 50%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 16px 8px;
}

.c3 {
  padding-left: 12px;
}

.c8 {
  padding: 8px 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px 16px 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  margin-bottom: 8px;
  margin-top: 8px;
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c4 {
  font-size: 1.5rem;
  margin: 0;
}

.c5 {
  font-size: 1rem;
  margin: 0;
}

.c0 {
  border-radius: 4px;
  display: inline-block;
  max-width: 400px;
  box-shadow: 0px 2px 5px 0px #ccc;
  width: 100%;
}

.c10 {
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 0.875rem;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  background-color: #598aed;
  color: #fdfdfd;
  font-size: 0.875rem;
  padding: 6px 14px;
}

.c10:hover {
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
}

.c10 .c11 {
  font-size: 1rem;
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <img
        class="c2"
        src="https://dummyimage.com/72x72"
      />
      <div
        class="c3"
      >
        <h2
          class="c4"
        >
          Title
        </h2>
        <h3
          class="c5"
        >
          Subtitle
        </h3>
      </div>
    </header>
    <div
      class="c6"
    >
      <img
        class="c7"
        src="https://dummyimage.com/600x600"
      />
    </div>
    <div
      class="c8"
    >
      Lorem
    </div>
    <footer
      class="c9"
    >
      <button
        class="c10"
        style="margin-right: 10px;"
      >
        Button
      </button>
      <button
        class="c10"
      >
        Cancel
      </button>
    </footer>
  </section>
</div>
`;
